--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <i class="fa-solid fa-arrow-left text-3xl text-black hover:text-indigo-700 transition-colors"></i>
                 <div class="w-90 h-90 relative">
                     <a href="/img/rokmonta/rokmonta1.png" class="full-screen-link">
-                        <img src="/img/rokmonta/rokmonta1.png" alt="" class="rounded-md w-full h-full object-cover shadow-md">
+                        <img src="img/rokmonta/rokmonta1.png" alt="" class="rounded-md w-full h-full object-cover shadow-md">
                         <div class="absolute inset-0 flex items-center justify-center">
                             <i class="fa-solid fa-search text-4xl text-white hover:text-indigo-700 transition-colors"></i>
                         </div>
