--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <div
         class="main-parent p-6 md:p-10 lg:p-16 flex flex-col md:flex-row justify-center items-center animate-fade-in-up">
         <div class="my-image md:mr-12">
-           <img src="img/waving.1bae5fcfb51082b5c2b4.png" alt="Profile Image">
+           <img src="img/waving.1bae5fcfb51082b5c2b4.png" alt="Profile Image"    class="w-48 h-48 md:w-64 md:h-64 rounded-full border-4 border-white shadow-lg hover:shadow-xl transition duration-300">>
 
-                class="w-48 h-48 md:w-64 md:h-64 rounded-full border-4 border-white shadow-lg hover:shadow-xl transition duration-300">
+             
         </div>
         <div class="main-desc text-center md:text-left md:w-3/4 animate-fade-in-up">
         <h1 class="text-3xl md:text-5xl lg:text-7xl font-bold text-black mb-4 md:mb-6 animate-once">
