--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
                     Tech Stack
                 </h3>
             <div  class="tech-stack-icons flex flex-wrap justify-center md:justify-start md:gap-4 items-center">
-                <img src="/img/html.6e7b1b463015c056aeb9a624c8dc2876.svg" alt="HTML Icon"
+                <img src="img/html.6e7b1b463015c056aeb9a624c8dc2876.svg" alt="HTML Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="/img/css3.9cecabbf6ce67609c48bc4f280a11002.svg" alt="CSS Icon"
+                <img src="img/css3.9cecabbf6ce67609c48bc4f280a11002.svg" alt="CSS Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="/img/javascript.de4c2594613e34b15666206bbede7327.svg" alt="JavaScript Icon"
+                <img src="img/javascript.de4c2594613e34b15666206bbede7327.svg" alt="JavaScript Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="/img/react.afac9c43724070bf6674f2692b7356a9.svg" alt="JavaScript Icon"
+                <img src="img/react.afac9c43724070bf6674f2692b7356a9.svg" alt="JavaScript Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="/img/tailwind.79614a5f61617ba49a0891494521226b.svg" alt="JavaScript Icon"
+                <img src="img/tailwind.79614a5f61617ba49a0891494521226b.svg" alt="JavaScript Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="/img/download.png" alt="JavaScript Icon"
+                <img src="img/download.png" alt="JavaScript Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
                     <i class="fa-solid fa-database text-3xl md:text-5xl text-indigo-700 animate-pulse  animate-pulse-sequence"></i>
 
@@ -101,7 +101,7 @@
     <div class="container mx-auto">
         <div class="flex flex-col md:flex-row justify-center items-center">
             <div class="w-full md:w-1/2 flex justify-center items-center ">
-                <img src="/img/cutas-removebg-preview.png" alt=""
+                <img src="img/cutas-removebg-preview.png" alt=""
                     class="rounded-full max-w-full h-auto p-8 transform ">
             </div>
             <div class="w-full md:w-1/2 px-4 py-8">
@@ -150,7 +150,7 @@
             <div class="flex items-center justify-center space-x-8">
                 <i class="fa-solid fa-arrow-left text-3xl text-black hover:text-indigo-700 transition-colors"></i>
                 <div class="w-90 h-90 relative">
-                    <a href="/img/rokmonta/rokmonta1.png" class="full-screen-link">
+                    <a href="img/rokmonta/rokmonta1.png" class="full-screen-link">
                         <img src="img/rokmonta/rokmonta1.png" alt="" class="rounded-md w-full h-full object-cover shadow-md">
                         <div class="absolute inset-0 flex items-center justify-center">
                             <i class="fa-solid fa-search text-4xl text-white hover:text-indigo-700 transition-colors"></i>
