--- a/index.html
+++ b/index.html
@@ -60,20 +60,22 @@
     <div
         class="main-parent p-6 md:p-10 lg:p-16 flex flex-col md:flex-row justify-center items-center animate-fade-in-up">
         <div class="my-image md:mr-12">
-           <img src="img/waving.1bae5fcfb51082b5c2b4.png" alt="Profile Image"    class="w-48 h-48 md:w-64 md:h-64 rounded-full border-4 border-white shadow-lg hover:shadow-xl transition duration-300">
-
-             
+            <img src="/website/img/waving.1bae5fcfb51082b5c2b4.png" alt="Profile Image"
+                class="w-32 h-32 md:w-64 md:h-64 rounded-full border-4 border-white shadow-lg hover:shadow-xl transition duration-300">
         </div>
+
         <div class="main-desc text-center md:text-left md:w-3/4 animate-fade-in-up">
         <h1 class="text-3xl md:text-5xl lg:text-7xl font-bold text-black mb-4 md:mb-6 animate-once">
             Front-End React<br>Developer
         </h1>
 
-            <p class="text-lg md:text-xl font-normal text-black mb-6 md:mb-8">
-                Hi, I'm Lukas Sargelis. A passionate Front-end React Developer<br>based in Kaunas, Lithuania <img src="img/pinpoint-removebg-preview.jpg"  width="40px" alt="" class="inline pb-3">
+            <p class="text-base md:text-lg font-normal text-black mb-4 md:mb-6 leading-relaxed md:leading-normal">
+                Hi, I'm Lukas Sargelis. A passionate Front-end React Developer based in Kaunas, Lithuania
+                <img src="/img/pinpoint-removebg-preview.jpg" width="30px" alt="" class="inline pb-1">
             </p>
-            <div class="icons  p-2">
-                <a href="#" class="text-2xl md:text-3xl hover:text-indigo-700 transition duration-300"><i
+
+            <div class="icons pb-3">
+                <a href="#" class="text-2xl md:text-3xl   hover:text-indigo-700 transition duration-300"><i
                         class="fa-brands fa-linkedin p-2 text-5xl"></i></a>
                 <a href="#" class="text-xl md:text-3xl hover:text-indigo-700 transition duration-300"><i
                         class="fa-brands fa-github text-5xl"></i></a>
@@ -83,17 +85,17 @@
                     Tech Stack
                 </h3>
             <div  class="tech-stack-icons flex flex-wrap justify-center md:justify-start md:gap-4 items-center">
-                <img src="img/html.6e7b1b463015c056aeb9a624c8dc2876.svg" alt="HTML Icon"
+                <img src="/img/html.6e7b1b463015c056aeb9a624c8dc2876.svg" alt="HTML Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="img/css3.9cecabbf6ce67609c48bc4f280a11002.svg" alt="CSS Icon"
+                <img src="/img/css3.9cecabbf6ce67609c48bc4f280a11002.svg" alt="CSS Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="img/javascript.de4c2594613e34b15666206bbede7327.svg" alt="JavaScript Icon"
+                <img src="/img/javascript.de4c2594613e34b15666206bbede7327.svg" alt="JavaScript Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="img/react.afac9c43724070bf6674f2692b7356a9.svg" alt="JavaScript Icon"
+                <img src="/img/react.afac9c43724070bf6674f2692b7356a9.svg" alt="JavaScript Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="img/tailwind.79614a5f61617ba49a0891494521226b.svg" alt="JavaScript Icon"
+                <img src="/img/tailwind.79614a5f61617ba49a0891494521226b.svg" alt="JavaScript Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="img/download.png" alt="JavaScript Icon"
+                <img src="/img/download.png" alt="JavaScript Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
                     <i class="fa-solid fa-database text-3xl md:text-5xl text-indigo-700 animate-pulse  animate-pulse-sequence"></i>
 
@@ -110,23 +112,24 @@
     <div class="container mx-auto">
         <div class="flex flex-col md:flex-row justify-center items-center">
             <div class="w-full md:w-1/2 flex justify-center items-center ">
-                <img src="img/cutas-removebg-preview.png" alt=""
+                <img src="/img/cutas-removebg-preview.png" alt=""
                     class="rounded-full max-w-full h-auto p-8 transform ">
             </div>
             <div class="w-full md:w-1/2 px-4 py-8">
-            <h2 id="my-element" class="uppercase font-extrabold text-indigo-700 text-4xl md:text-4xl mb-4">
+            <h2 id="my-element" class="uppercase font-extrabold text-indigo-700 text-4xl md:text-4xl mb-4 pl-3">
                 About Me
             </h2>
 
 
-                <p class="middle-p text-lg md:text-xl mb-4 animate-fade-in-up">A dedicated Front-end Developer based in
-                    Kaunas, Lithuania
-                </p>
-                <p class="text-lg md:text-xl animate-fade-in-up">
-                    As a Junior Front-End Developer, I possess an impressive arsenal of skills in HTML, CSS, JavaScript,
-                    React, Tailwind, and some backend like node.js and database - MySQL. I excel in designing and
-                    maintaining responsive websites that offer a smooth user experience.
-                </p>
+        <p class="middle-p text-base md:text-lg mb-3 px-4 animate-fade-in-up">A dedicated Front-end Developer based in
+            Kaunas, Lithuania.
+        </p>
+        <p class="text-base md:text-lg px-4 animate-fade-in-up">
+            As a Junior Front-End Developer, I possess an impressive arsenal of skills in HTML, CSS, JavaScript,
+            React, Tailwind, and some backend like node.js and database - MySQL. I excel in designing and
+            maintaining responsive websites that offer a smooth user experience.
+        </p>
+
             </div>
         </div>
     </div>
@@ -156,29 +159,34 @@
                     <i class="fa-solid fa-globe text-3xl text-black hover:text-indigo-700 transition-colors"></i>
                 </div>
             </div>
-            <div class="flex items-center justify-center space-x-8">
-                <i class="fa-solid fa-arrow-left text-3xl text-black hover:text-indigo-700 transition-colors"></i>
-                <div class="w-90 h-90 relative">
-                    <a href="img/rokmonta/rokmonta1.png" class="full-screen-link">
-                        <img src="img/rokmonta/rokmonta1.png" alt="" class="rounded-md w-full h-full object-cover shadow-md">
-                        <div class="absolute inset-0 flex items-center justify-center">
-                            <i class="fa-solid fa-search text-4xl text-white hover:text-indigo-700 transition-colors"></i>
-                        </div>
-                    </a>
-                </div>
-                <i class="fa-solid fa-arrow-right text-3xl text-black hover:text-indigo-700 transition-colors"></i>
+        <div class="flex items-center justify-center space-x-8">
+            <i class="fa-solid fa-arrow-left text-3xl text-black hover:text-indigo-700 transition-colors"></i>
+            <div class="w-90 h-90 relative"> <!-- Adjusted dimensions for mobile -->
+                <a href="/img/rokmonta/rokmonta1.png" class="full-screen-link">
+                    <img src="/img/rokmonta/rokmonta1.png" alt="" class="rounded-md w-full h-full object-cover shadow-md">
+                    <div class="absolute inset-0 flex items-center justify-center">
+                        <i class="fa-solid fa-search text-4xl text-white hover:text-indigo-700 transition-colors"></i>
+                    </div>
+                </a>
             </div>
+            <i class="fa-solid fa-arrow-right text-3xl text-black hover:text-indigo-700 transition-colors"></i>
+        </div>
+
         </div>
     </div>
     <!-- Full screen overlay for image -->
-    <div class="full-screen-overlay hidden">
-        <div class="full-screen-content">
-            <img src="" alt="" class="full-screen-image">
-            <i class="fa-solid fa-times text-5xl text-white full-screen-close"></i>
-            <i class="fa-solid fa-arrow-left text-5xl text-white full-screen-nav prev"></i>
-            <i class="fa-solid fa-arrow-right text-5xl text-white full-screen-nav next"></i>
+<div class="full-screen-overlay hidden">
+    <div class="full-screen-content">
+        <img src="" alt="" class="full-screen-image max-w-80vw max-h-80vh">
+        <div class="absolute inset-0 flex items-center justify-center">
+            <i class="fa-solid fa-times text-5xl text-white full-screen-close" style="font-size: 2rem;"></i>
+            <i class="fa-solid fa-arrow-left text-5xl text-white full-screen-nav prev" style="font-size: 2rem;"></i>
+            <i class="fa-solid fa-arrow-right text-5xl text-white full-screen-nav next" style="font-size: 2rem;"></i>
         </div>
     </div>
+</div>
+
+
 
     <!-- other project -->
     <div class="container mx-auto mt-3">
@@ -212,9 +220,9 @@
 <div class="full-screen-overlay-project2 hidden">
     <div class="full-screen-content">
         <img src="" alt="" class="full-screen-image-project2">
-        <i class="fa-solid fa-times text-5xl text-white full-screen-close-project2"></i>
-        <i class="fa-solid fa-arrow-left text-5xl text-white full-screen-nav prev-project2"></i>
-        <i class="fa-solid fa-arrow-right text-5xl text-white full-screen-nav next-project2"></i>
+        <i class="fa-solid fa-times text-5xl text-white full-screen-close-project2" style="font-size: 2rem;"></i>
+        <i class="fa-solid fa-arrow-left text-5xl text-white full-screen-nav prev-project2 " style="font-size: 2rem;"></i>
+        <i class="fa-solid fa-arrow-right text-5xl text-white full-screen-nav next-project2 " style="font-size: 2rem;"></i>
     </div>
 </div>
 
