--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div
         class="main-parent p-6 md:p-10 lg:p-16 flex flex-col md:flex-row justify-center items-center animate-fade-in-up">
         <div class="my-image md:mr-12">
-            <img src="/website/img/waving.1bae5fcfb51082b5c2b4.png" alt="Profile Image"
+            <img src=img/waving.1bae5fcfb51082b5c2b4.png" alt="Profile Image"
                 class="w-32 h-32 md:w-64 md:h-64 rounded-full border-4 border-white shadow-lg hover:shadow-xl transition duration-300">
         </div>
 
@@ -71,7 +71,7 @@
 
             <p class="text-base md:text-lg font-normal text-black mb-4 md:mb-6 leading-relaxed md:leading-normal">
                 Hi, I'm Lukas Sargelis. A passionate Front-end React Developer based in Kaunas, Lithuania
-                <img src="/img/pinpoint-removebg-preview.jpg" width="30px" alt="" class="inline pb-1">
+                <img src="img/pinpoint-removebg-preview.jpg" width="30px" alt="" class="inline pb-1">
             </p>
 
             <div class="icons pb-3">
@@ -85,17 +85,17 @@
                     Tech Stack
                 </h3>
             <div  class="tech-stack-icons flex flex-wrap justify-center md:justify-start md:gap-4 items-center">
-                <img src="/img/html.6e7b1b463015c056aeb9a624c8dc2876.svg" alt="HTML Icon"
+                <img src="img/html.6e7b1b463015c056aeb9a624c8dc2876.svg" alt="HTML Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="/img/css3.9cecabbf6ce67609c48bc4f280a11002.svg" alt="CSS Icon"
+                <img src="img/css3.9cecabbf6ce67609c48bc4f280a11002.svg" alt="CSS Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="/img/javascript.de4c2594613e34b15666206bbede7327.svg" alt="JavaScript Icon"
+                <img src="img/javascript.de4c2594613e34b15666206bbede7327.svg" alt="JavaScript Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="/img/react.afac9c43724070bf6674f2692b7356a9.svg" alt="JavaScript Icon"
+                <img src="img/react.afac9c43724070bf6674f2692b7356a9.svg" alt="JavaScript Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="/img/tailwind.79614a5f61617ba49a0891494521226b.svg" alt="JavaScript Icon"
+                <img src="img/tailwind.79614a5f61617ba49a0891494521226b.svg" alt="JavaScript Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                <img src="/img/download.png" alt="JavaScript Icon"
+                <img src="img/download.png" alt="JavaScript Icon"
                     class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
                     <i class="fa-solid fa-database text-3xl md:text-5xl text-indigo-700 animate-pulse  animate-pulse-sequence"></i>
 
@@ -112,7 +112,7 @@
     <div class="container mx-auto">
         <div class="flex flex-col md:flex-row justify-center items-center">
             <div class="w-full md:w-1/2 flex justify-center items-center ">
-                <img src="/img/cutas-removebg-preview.png" alt=""
+                <img src="img/cutas-removebg-preview.png" alt=""
                     class="rounded-full max-w-full h-auto p-8 transform ">
             </div>
             <div class="w-full md:w-1/2 px-4 py-8">
@@ -162,8 +162,8 @@
         <div class="flex items-center justify-center space-x-8">
             <i class="fa-solid fa-arrow-left text-3xl text-black hover:text-indigo-700 transition-colors"></i>
             <div class="w-90 h-90 relative"> <!-- Adjusted dimensions for mobile -->
-                <a href="/img/rokmonta/rokmonta1.png" class="full-screen-link">
-                    <img src="/img/rokmonta/rokmonta1.png" alt="" class="rounded-md w-full h-full object-cover shadow-md">
+                <a href="img/rokmonta/rokmonta1.png" class="full-screen-link">
+                    <img src="img/rokmonta/rokmonta1.png" alt="" class="rounded-md w-full h-full object-cover shadow-md">
                     <div class="absolute inset-0 flex items-center justify-center">
                         <i class="fa-solid fa-search text-4xl text-white hover:text-indigo-700 transition-colors"></i>
                     </div>
@@ -177,7 +177,7 @@
     <!-- Full screen overlay for image -->
 <div class="full-screen-overlay hidden">
     <div class="full-screen-content">
-        <img src="" alt="" class="full-screen-image max-w-80vw max-h-80vh">
+        <img src="img/rokmonta/rokmonta1.png" alt="" class="full-screen-image max-w-80vw max-h-80vh">
         <div class="absolute inset-0 flex items-center justify-center">
             <i class="fa-solid fa-times text-5xl text-white full-screen-close" style="font-size: 2rem;"></i>
             <i class="fa-solid fa-arrow-left text-5xl text-white full-screen-nav prev" style="font-size: 2rem;"></i>
@@ -204,7 +204,7 @@
             <div class="flex items-center justify-center space-x-8">
                 <i class="fa-solid fa-arrow-left text-3xl text-black hover:text-indigo-700 transition-colors"></i>
                 <div class="w-90 h-90 relative">
-                    <a href="/img/mileOfprogress/1.png" class="full-screen-link-project2">
+                    <a href="img/mileOfprogress/1.png" class="full-screen-link-project2">
                         <img src="img/mileOfprogress/1.png" alt="" class="rounded-md w-full h-full object-cover shadow-md">
                         <div class="absolute inset-0 flex items-center justify-center">
                             <i class="fa-solid fa-search text-4xl text-black hover:text-indigo-700 transition-colors"></i>
@@ -219,7 +219,7 @@
 <!-- Full screen overlay for image -->
 <div class="full-screen-overlay-project2 hidden">
     <div class="full-screen-content">
-        <img src="" alt="" class="full-screen-image-project2">
+        <img src="img/mileOfprogress/1.png" alt="" class="full-screen-image-project2">
         <i class="fa-solid fa-times text-5xl text-white full-screen-close-project2" style="font-size: 2rem;"></i>
         <i class="fa-solid fa-arrow-left text-5xl text-white full-screen-nav prev-project2 " style="font-size: 2rem;"></i>
         <i class="fa-solid fa-arrow-right text-5xl text-white full-screen-nav next-project2 " style="font-size: 2rem;"></i>
@@ -238,7 +238,7 @@
                 <p class="uppercase font-extrabold text-indigo-700 text-4xl md:text-4xl mb-4"id="contact-heading">
                     Contact</p>
                 <p class="leading-relaxed max-w-prose text-neutrals-300">Get your space suit ready and tell me your
-                    ideas to develop your dream website.</p><a href="mailto:hello@lokkeestudios.com"
+                    ideas to develop your dream website.</p><a href="Luklukas781@gmail.com"
                     class="transition-colors focus-visible:text-primary hover:text-primary inline-flex items-center mt-8 text-neutrals-50"
                     title="Hit me up"><svg class="h-5 w-5 inline mr-2" viewBox="0 0 24 24" aria-hidden="true"
                         fill="currentColor" xmlns="http://www.w3.org/2000/svg">
