--- a/index.html
+++ b/index.html
@@ -111,10 +111,11 @@
 <section class="bg-black py-16 text-white">
     <div class="container mx-auto">
         <div class="flex flex-col md:flex-row justify-center items-center">
-            <div class="w-full md:w-1/2 flex justify-center items-center ">
-                <img src="img/cutas-removebg-preview.png" alt=""
-                    class="rounded-full max-w-full h-auto p-8 transform ">
-            </div>
+           <div class="w-full md:w-1/2 flex justify-center items-center">
+    <img src="img/cutas-removebg-preview.png" alt=""
+        class="rounded-full max-w-2/3 h-auto p-4 md:p-8 transform">
+</div>
+
             <div class="w-full md:w-1/2 px-4 py-8">
             <h2 id="my-element" class="uppercase font-extrabold text-indigo-700 text-4xl md:text-4xl mb-4 pl-3">
                 About Me
