--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div
         class="main-parent p-6 md:p-10 lg:p-16 flex flex-col md:flex-row justify-center items-center animate-fade-in-up">
         <div class="my-image md:mr-12">
-            <img src="website/img/waving.1bae5fcfb51082b5c2b4.png" alt="Profile Image"
+            <img src="img/waving.1bae5fcfb51082b5c2b4.png" alt="Profile Image"
                 class="w-32 h-32 md:w-64 md:h-64 rounded-full border-4 border-white shadow-lg hover:shadow-xl transition duration-300">
         </div>
 
