--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 <header class="py-4 flex items-center justify-between text-center font-sans shadow-md bg-white">
     <div class="logo p-4 text-3xl font-semibold ml-4">
-        <a href="/website/" class="text-black hover:text-indigo-700 transition md:text-4xl">Lukas.dev</a>
+        <a href="/" class="text-black hover:text-indigo-700 transition md:text-4xl">Lukas.dev</a>
     </div>
     <nav id="navLinks" class="navLinks py-8 font-bold mr-4 hidden md:block">
         <a href="#about"class="px-6 md:px-8 py-2 text-lg md:text-2xl text-gray-700 hover:text-indigo-700">About</a>
@@ -42,9 +42,9 @@
 <div id="overlay" class="hidden">
     <div class="overlay-content">
         <nav class="overlay-navLinks py-8 font-bold">
-            <a href="" class="px-6 md:px-8 py-2 text-lg md:text-2xl text-gray-700 hover:text-indigo-700">About</a>
-            <a href="" class="px-6 md:px-8 py-2 text-lg md:text-2xl text-gray-700 hover:text-indigo-700">Projects</a>
-            <a href="" class="px-6 md:px-8 py-2 text-lg md:text-2xl text-gray-700 hover:text-indigo-700">Contact</a>
+            <a href="#about" class="px-6 md:px-8 py-2 text-lg md:text-2xl text-gray-700 hover:text-indigo-700">About</a>
+            <a href="#projects" class="px-6 md:px-8 py-2 text-lg md:text-2xl text-gray-700 hover:text-indigo-700">Projects</a>
+            <a href="#contact" class="px-6 md:px-8 py-2 text-lg md:text-2xl text-gray-700 hover:text-indigo-700">Contact</a>
         </nav>
             <i id="closeOverlay" class="fa-solid fa-times overlay-close p-4 text-5xl"></i>
 
@@ -56,7 +56,7 @@
 
 
 
-<main class="bg-gradient-to-b from-gray-100 to-white h-full">
+<main class="bg-gradient-to-b from-gray-100 to-white h-full" >
     <div
         class="main-parent p-6 md:p-10 lg:p-16 flex flex-col md:flex-row justify-center items-center animate-fade-in-up">
         <div class="my-image md:mr-12">
