--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <p class="text-lg md:text-2xl  text-black">Discover the projects I've worked on</p>
             </div>
             <div
-                class="rounded-lg border border-gray-300 shadow-lg overflow-hidden bg-white p-8 transform hover:scale-105 transition-transform">
+                class="m-5 rounded-lg border border-gray-300 shadow-lg overflow-hidden bg-white p-8 transform hover:scale-105 transition-transform">
                 <div class="text-center mb-6">
                     <h2 class="text-2xl md:text-3xl font-semibold text-indigo-700 pt-4">Rokmonta</h2>
 
