--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <header class="py-4 flex items-center justify-between text-center font-sans shadow-md bg-white">
         <div class="logo p-4 text-3xl font-semibold ml-4">
-            <a href="/website/" class="text-black hover:text-indigo-700 transition md:text-4xl">Lukas.dev</a>
+            <a href="/" class="text-black hover:text-indigo-700 transition md:text-4xl">Lukas.dev</a>
         </div>
         <nav id="navLinks" class="navLinks py-8 font-bold mr-4 hidden md:block">
             <a href="#about" class="px-6 md:px-8 py-2 text-lg md:text-2xl text-gray-700 hover:text-indigo-700">About</a>
@@ -63,7 +63,7 @@
         <div
             class="main-parent p-6 md:p-10 lg:p-16 flex flex-col md:flex-row justify-center items-center animate-fade-in-up">
             <div class="my-image md:mr-12">
-                <img src="/website/img/waving.1bae5fcfb51082b5c2b4.png" alt="Profile Image"
+                <img src="img/waving.1bae5fcfb51082b5c2b4.png" alt="Profile Image"
                     class="w-32 h-32 md:w-64 md:h-64 rounded-full border-4 border-white shadow-lg hover:shadow-xl transition duration-300">
             </div>
 
@@ -74,7 +74,7 @@
 
                 <p class="text-lg md:text-2xl font-normal text-black mb-4 md:mb-6 leading-relaxed md:leading-normal">
                     Hi, I'm Lukas Sargelis. A passionate Front-end React Developer based in Kaunas, Lithuania
-                    <img src="/img/pinpoint-removebg-preview.jpg" width="30px" alt="" class="inline pb-1">
+                    <img src="img/pintpoint (2).png" width="30px" alt="" class="inline pb-1">
                 </p>
 
                 <div class="icons pb-3">
@@ -90,17 +90,17 @@
                         Tech Stack
                     </h3>
                     <div class="tech-stack-icons flex flex-wrap justify-center md:justify-start md:gap-4 items-center">
-                        <img src="/img/html.6e7b1b463015c056aeb9a624c8dc2876.svg" alt="HTML Icon"
+                        <img src="img/html.6e7b1b463015c056aeb9a624c8dc2876.svg" alt="HTML Icon"
                             class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                        <img src="/img/css3.9cecabbf6ce67609c48bc4f280a11002.svg" alt="CSS Icon"
+                        <img src="img/css3.9cecabbf6ce67609c48bc4f280a11002.svg" alt="CSS Icon"
                             class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                        <img src="/img/javascript.de4c2594613e34b15666206bbede7327.svg" alt="JavaScript Icon"
+                        <img src="img/javascript.de4c2594613e34b15666206bbede7327.svg" alt="JavaScript Icon"
                             class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                        <img src="/img/react.afac9c43724070bf6674f2692b7356a9.svg" alt="JavaScript Icon"
+                        <img src="img/react.afac9c43724070bf6674f2692b7356a9.svg" alt="JavaScript Icon"
                             class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                        <img src="/img/tailwind.79614a5f61617ba49a0891494521226b.svg" alt="JavaScript Icon"
+                        <img src="img/tailwind.79614a5f61617ba49a0891494521226b.svg" alt="JavaScript Icon"
                             class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
-                        <img src="/img/download.png" alt="JavaScript Icon"
+                        <img src="img/download.png" alt="JavaScript Icon"
                             class="w-10 h-10 md:w-12 md:h-12 animate-pulse-sequence">
                         <i
                             class="fa-solid fa-database text-3xl md:text-5xl text-indigo-700 animate-pulse  animate-pulse-sequence"></i>
@@ -155,7 +155,7 @@
                 <p class="text-lg md:text-2xl  text-black">Discover the projects I've worked on</p>
             </div>
             <div
-                class="m-5 rounded-lg border border-gray-300 shadow-lg overflow-hidden bg-white p-8 transform hover:scale-105 transition-transform">
+                class="md:w-3/4  m-auto  rounded-lg border border-gray-300 shadow-lg overflow-hidden bg-white p-8 transform hover:scale-105 transition-transform">
                 <div class="text-center mb-6">
                     <h2 class="text-2xl md:text-3xl font-semibold text-indigo-700 pt-4">Rokmonta</h2>
 
@@ -178,7 +178,7 @@
                 <div class="flex items-center justify-center space-x-8">
 
                     <div class="w-full md:w-90 md:h-90 relative"> <!-- Adjusted dimensions for mobile -->
-                        <a href="/img/rokmonta/rokmonta1.png" class="full-screen-link">
+                        <a href="img/rokmonta/rokmonta1.png" class="full-screen-link">
                             <img src="img/rokmonta/rokmonta1.png" alt=""
                                 class="rounded-md w-full h-full object-cover shadow-md">
                             <div class="absolute inset-0 flex items-center justify-center">
@@ -220,7 +220,7 @@
         <!-- other project -->
         <div class="container mx-auto mt-5">
             <div
-                class="rounded-lg border border-gray-300 shadow-lg overflow-hidden bg-white p-8 transform hover:scale-105 transition-transform">
+                class="md:w-3/4  m-auto  rounded-lg border border-gray-300 shadow-lg overflow-hidden bg-white p-8 transform hover:scale-105 transition-transform">
                 <div class="text-center mb-6">
                     <h2 class="text-2xl md:text-3xl font-semibold text-indigo-700 pt-4">Mile Of Progress</h2>
 
@@ -241,7 +241,7 @@
                 </div>
                 <div class="flex items-center justify-center space-x-8">
                     <div class="w-full md:w-90 md:h-90 relative">
-                        <a href="/img/mileOfprogress/1.png" class="full-screen-link-project2">
+                        <a href="img/mileOfprogress/1.png" class="full-screen-link-project2">
                             <img src="img/mileOfprogress/1.png" alt=""
                                 class="rounded-md w-full h-full object-cover shadow-md">
                             <div class="absolute inset-0 flex items-center justify-center">
