--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <header class="py-4 flex items-center justify-between text-center font-sans shadow-md bg-white">
         <div class="logo p-4 text-3xl font-semibold ml-4">
-            <a href="website/" class="text-black hover:text-indigo-700 transition md:text-4xl">Lukas.dev</a>
+            <a href="/" class="text-black hover:text-indigo-700 transition md:text-4xl">Lukas.dev</a>
         </div>
         <nav id="navLinks" class="navLinks py-8 font-bold mr-4 hidden md:block">
             <a href="#about" class="px-6 md:px-8 py-2 text-lg md:text-2xl text-gray-700 hover:text-indigo-700">About</a>
