--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="container mx-auto">
         <div class="flex flex-col md:flex-row justify-center items-center">
         <div class="w-full md:w-1/2 flex justify-center items-center">
-<img src="img/[removal.ai]_a92f2c59-c8e2-4a51-aff1-37b9cc955059-img_20221026_210337_1_W6PATJ.png" alt=""
+<img src="[removal.ai]_a92f2c59-c8e2-4a51-aff1-37b9cc955059-img_20221026_210337_1_W6PATJ.png" alt=""
     class="rounded-full max-w-1/2 max-h-96 p-4 md:p-8 border-white animate-border-transform">
 
 
