--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 drive.
             </p>
                 <div class="flex justify-center mt-4 space-x-4">
-                    <a href=""><i class="fa-brands fa-github text-3xl text-black hover:text-indigo-700 transition-colors"></i></a>
+                    <a href="https://github.com/w1nex5372/rokmonta"><i class="fa-brands fa-github text-3xl text-black hover:text-indigo-700 transition-colors"></i></a>
                     
                     <a href="https://www.rokmonta.lt/"><i class="fa-solid fa-globe text-3xl text-black hover:text-indigo-700 transition-colors"></i></a>
                    
@@ -221,8 +221,8 @@
                 tailored tools for self-improvement.
                 </p>
                 <div class="flex justify-center mt-4 space-x-4">
-                    <a href="https://github.com/w1nex5372/Milestone-Mentor"><i class="fa-brands fa-github text-3xl text-black hover:text-indigo-700 transition-colors"></i></a>
-                   <a href=""><i class="fa-solid fa-globe text-3xl text-black hover:text-indigo-700 transition-colors"></i></a>
+                    <a href="https://github.com/w1nex5372/MileOfProgress"><i class="fa-brands fa-github text-3xl text-black hover:text-indigo-700 transition-colors"></i></a>
+                   <a href="https://mile-of-progress-copy.vercel.app/"><i class="fa-solid fa-globe text-3xl text-black hover:text-indigo-700 transition-colors"></i></a>
                 </div>
             </div>
             <div class="flex items-center justify-center space-x-8">
