--- a/index.html
+++ b/index.html
@@ -270,9 +270,7 @@
             <p class="text-lg md:text-xl text-black p-2">
                 Embark on a transformative social journey with our innovative platform. Navigate through the diverse landscapes of
                 expression on our app, featuring an Explore section for discovery, a Message hub for seamless communication, and a
-                personalized Profile and Home experience. Elevate your social presence, connect with others effortlessly, and curate
-                your digital world, all within a unified space. Unleash the power of connection, exploration, and expression with
-                our tailored tools for a refreshing social media experience.
+                personalized Profile and Home experience. Elevate your social presence, connect with others.
             </p>
                 <div class="flex justify-center mt-4 space-x-4">
                     <a href="https://github.com/w1nex5372/auth-auth-prisma"><i
