--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <div class="flex flex-wrap justify-center items-center gap-1 p-4 md:p-4">
                     <span class="text-sm md:text-base py-1 px-2 md:py-2 md:px-4 bg-indigo-700 text-white rounded-lg">HTML</span>
                     <span class="text-sm md:text-base py-1 px-2 md:py-2 md:px-4 bg-indigo-700 text-white rounded-lg">VANILLA JS</span>
-                    <span class="text-sm md:text-base py-1 px-2 md:py-2 md:px-4 bg-indigo-700 text-white rounded-lg">CSS</span>
+                    <span class="text-sm md:text-base py-1 px-2 md:py-2 md:px-4 bg-indigo-700 text-white rounded-lg">TAILWIND CSS</span>
                 </div>
 
         </div>
