--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
 
-<main class="bg-gradient-to-b from-gray-100 to-white h-full">
+<main class="bg-gradient-to-b from-gray-100 to-white h-screen">
     <div
         class="main-parent p-6 md:p-10 lg:p-16 flex flex-col md:flex-row justify-center items-center animate-fade-in-up">
             <div class="main-desc text-center md:text-left md:w-3/4 animate-fade-in-up">
